# xdelimitarea

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.in  mkinstalldirs  utils.c  windows.c  xdelimitarea.c  xdelimitarea.h  xdelimitarea.info  xdelimitarea.texi
