dnl Process this file with autoconf to produce a configure script.
AC_INIT(xdelimitarea.c)
AM_INIT_AUTOMAKE(xdelimitarea, 1.0.1)

dnl Check for programs.
AC_PROG_CC
AC_PATH_PROG(SH, sh)
AC_PATH_PROG(ETAGS, etags)

dnl Check for X. We have to save the X_CFLAGS, X_LIBS
dnl variables found by AC_PATH_XTRA to the appropriate
dnl compiler and linker output variables.
AC_PATH_XTRA
CPPFLAGS="$CPPFLAGS $X_CFLAGS"
LDFLAGS="$LDFLAGS $X_LIBS"
AC_CHECK_LIB(X11, XOpenDisplay, \
             LIBS="$LIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS", \
             LIBS="$LIBS")

dnl Check for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Substitute output variables.
AC_SUBST(SH)
AC_SUBST(CC)
AC_SUBST(ETAGS)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBS)
AC_SUBST(RM)

AC_OUTPUT(Makefile)
